--- a/src/client/app/main.view.html
+++ b/src/client/app/main.view.html
@@ -1,3 +1,3 @@
-<div class="main-container">
-  <h1>Hi from main</h1>
+<div class="web-main-container">
+  <h1 class="web-main-container__header web-main-container__header--color-red">Hi from main</h1>
 </div>
